[package]
edition = "2021"
name = "tvm_types"
version = "3.0.1"

[dependencies]
aes-ctr = "0.6.0"
anyhow = "1.0.79"
base64 = "0.21.7"
blst = { features = ["portable"], version = "0.3.11" }
crc = "3.0.1"
curve25519-dalek = "4.1.1"
ed25519 = "2.2.3"
ed25519-dalek = { features = ["hazmat", "rand_core"], version = "2.1.0" }
hex = "0.4.3"
lazy_static = "1.4.0"
lockfree = { git = "https://github.com/tvmlabs/lockfree" }
log = "0.4.20"
num = "0.4.1"
num-derive = "0.4.1"
num-traits = "0.2.17"
rand = "0.8.5"
serde = { features = ["derive", "rc"], version = "1.0.196" }
serde_json = "1.0.113"
sha2 = "0.10.8"
smallvec = { features = ["const_new", "union", "write"], version = "1.13.1" }
thiserror = "1.0.56"
x25519-dalek = "2.0.0"

[dev-dependencies]
criterion = "0.5.1"
pprof = { version = "0.13.0", default-features = false, features = ["criterion", "flamegraph"] }

[features]
export_key = []

[[bench]]
harness = false
name = "benchmarks"

[lib]
bench = false
